@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150830"
-#define public MagickPackageReleaseDate "snapshot-20150830"
+#define public MagickPackageVersionAddendum ".020150913"
+#define public MagickPackageReleaseDate "snapshot-20150913"
