@@ -1124,7 +1124,7 @@ DrawAffineImage(Image *image,const Image *composite,
   inverse_affine=InverseAffineMatrix(affine);
   if (edge.y1 < 0)
     edge.y1=0.0;
-  if (edge.y2 >= image->rows)
+  if (edge.y2 > image->rows - 1)
     edge.y2=image->rows-1;
   y_min=(long) ceil(edge.y1-0.5);
   y_max=(long) floor(edge.y2+0.5);
@@ -1165,7 +1165,7 @@ DrawAffineImage(Image *image,const Image *composite,
         continue;
       if (inverse_edge.x1 < 0)
         inverse_edge.x1=0.0;
-      if (inverse_edge.x2 >= image->columns)
+      if (inverse_edge.x2 > image->columns-1)
         inverse_edge.x2=image->columns-1;
       start=(long) ceil(inverse_edge.x1-0.5);
       stop=(long) floor(inverse_edge.x2+0.5);
