@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2015-09-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/render.c (DrawAffineImage): Fix problem that sometimes
+output rows are skipped when using OpenMP.  Problem identification
+and patch by Kevin Matzen.  Resolves SourceForge issue #316
+&quot;-affine sometimes produces output with missing rows&quot;.</li>
+</ul>
+</blockquote>
 <p>2015-08-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
